# ripcards

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
docs/: README.md  commands-new-cards.md  commands-reports.md  commands-session.md  commands-study-interaction.md  leitner-system.md  system-design.md
docs/model-files/: [session_file_iso_date].toml  config.toml  ripcard.toml
docs/model-outputs/: session-view  terminal-commands-sample
ripi/: RIPISSUE.md  ROADMAP.md
ripi/.closed/Issue/initial_setup/: description.md
ripi/Issue/define_commands_usage/: description.md
ripi/Issue/design_system_architecture_and_specs/: description.md
ripi/Issue/implement_card_type_with_paths/: description.md
ripi/Issue/implement_git_dir_traversal_pattern/: description.md
ripi/Issue/implement_git_manipulation_for_ripc_new/: description.md
ripi/Issue/implement_new_and_init_cards_command/: description.md
ripi/Issue/implement_ripc_command/: description.md
ripi/Issue/implement_ripc_session_progress/: description.md
ripi/Issue/implement_ripc_session_start/: description.md
ripi/Issue/ripc_init_condition_to_project_root_git_repository/: description.md
src/: cards.rs  cli.rs  config.rs  context.rs  handlers.rs  lib.rs  main.rs  methods.rs  msgs.rs  utils.rs
src/msgs/: error.rs
src/utils/: find_cards.rs
templates/: question.md
tests/: card_save_tests.rs  cli_tests.rs  handle_init_tests.rs  handle_new_card_tests.rs  handle_session_tests.rs  handlers_test.rs  handlers_tests.rs  utils_test.rs  utils_tests.rs
tests/common/: mod.rs
(+2 files in other folders)
